Adjust styles, fix the gaps

--- a/modules/ppcp-settings/resources/css/components/reusable-components/_onboarding-header.scss
+++ b/modules/ppcp-settings/resources/css/components/reusable-components/_onboarding-header.scss
@@ -14,7 +14,6 @@
 	}
 
 	&__content {
-		max-width: 458px;
 		margin: 0 auto;
 		display: flex;
 		flex-direction: column;
