--- a/modules/ppcp-settings/resources/css/components/reusable-components/_settings-wrapper.scss
+++ b/modules/ppcp-settings/resources/css/components/reusable-components/_settings-wrapper.scss
@@ -8,7 +8,7 @@
 	&-inner-container {
 		margin-left: auto;
 		margin-right: auto;
-		padding: 0 16px 72px;
+		padding: 0 16px 48px;
 		box-sizing: border-box;
 
 		@media screen and (max-width: 480px) {
